[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Combat/Character_End_Screen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.831373, 0.168627, 0.168627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.913725, 0.639216, 0.639216, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Character_End_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 1.0
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_right = 0.3
anchor_bottom = 0.2
text = "Char Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XP_Earned" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 64.0
text = "???XP points gained"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rem_Life" type="ProgressBar" parent="."]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 16.0
margin_bottom = -16.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life_Label" type="Label" parent="Rem_Life"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "XX/XXX"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]
